style.css
/* Custom Properties */
:root {
    --font: system-ui, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
    --sidebar-btn-bg: hsl(199, 100%, 40%);
    --sidebar-btn-text: #f5f5f5;
    --faded-text: #686868;
    --search-n-main-bg: hsl(0, 0%, 95%);
    --cards-bg: #fff;
    --project-border: #ffcb3b;
    --box-shadow: hsla(0, 0%, 43%, 0.25);
}

/* CSS RESET */
*,
*::before,
*::after {
    box-sizing: border-box;
    margin: 0;
}

img,
picture,
video,
canvas,
svg {
    display: block;
    max-width: 100%;
}

input,
button,
textarea,
select {
    font: inherit;
}

p,
h1,
h2,
h3,
h4,
h5,
h6 {
    overflow-wrap: break-word;
}

/* End of Reset */


/* General */
body {
    font-family: var(--font);
}

.container {
    display: grid;
    grid-template-columns: 1fr 4fr;
}

.sidebar,
.header,
.main {
    display: grid;
}

.icon {
    min-width: 30px;
    cursor: pointer;
}

.project-description,
.text,
.user-project {
    color: var(--faded-text);
}

.header,
.main .card {
    box-shadow: 3px 3px 5px var(--box-shadow);
}


/* Sidebar section */

.sidebar {
    grid-row: 1/3;
    align-content: start;
    gap: 4rem;
    padding: 0.75rem;
    background: var(--sidebar-btn-bg);
    color: var(--sidebar-btn-text);
    font-weight: 900;
    z-index: 2;
}

.sidebar>* {
    display: grid;
    grid-template-columns: 50px 10rem;
    align-items: center;
    gap: 1rem;
}

.branding p {
    font-size: 1.75rem;
}

.branding .icon {
    max-width: 50px;
}

.sidebar> :not(.branding) {
    display: grid;
}

.sidebar> :not(.branding)>.icon {
    justify-self: center;
}

.sidebar .icon img {
    filter: invert(1);
}

.sidebar .nav p,
.sidebar .nav-misc p {
    cursor: pointer;
    font-size: 1.3rem;
}


/* Header section */
.header {
    grid-template-columns: 2fr 1fr;
    padding: 0.75rem 2rem 0.75rem 1rem;
    gap: 2rem;
    z-index: 1;
}

.search-bar,
.header .user-info,
.user-greeting,
.buttons {
    display: flex;
    column-gap: 1.5rem;
    align-items: center;
}

.search-bar>input[type="search"] {
    flex: 1;
    border: none;
    border-radius: 1rem;
    padding: 0.25rem 1rem;
    background-color: var(--search-n-main-bg);
}

.user-info,
.buttons {
    justify-content: flex-end;
}

.user-info>.user-icon {
    max-width: 40px;
    height: 40px;
}

.user-info>.user-icon>img {
    height: 100%;
    border-radius: 50%;
}

.user-info>.user-name {
    font-weight: 600;
}

.user-greeting>.user-icon {
    max-width: 60px;
    height: 60px;
}

.user-greeting>.user-icon>img {
    height: 100%;
    border-radius: 50%;
}

.user-greeting>.greeting {
    font-weight: 600;
    line-height: 1.5;
}

.user-greeting .greet {
    font-size: 0.8rem;
}

.user-greeting .user {
    font-size: 1.3rem;
}

.buttons>* {
    padding: 0.6em 1.8em;
    border-radius: 2rem;
    border: none;
    background: var(--sidebar-btn-bg);
    color: var(--sidebar-btn-text);
    font-weight: 600;
    cursor: pointer;
}

/* Main section */
.main {
    grid-template-columns: 3fr 1fr;
    gap: 2rem;
    padding: 3rem 1.25rem;
    background: var(--search-n-main-bg);
}

.main h2 {
    margin-bottom: 0.75rem;
}

.main .card {
    border-radius: 0.5rem;
}

.projects .card,
.announcements .card,
.trending .card {
    background-color: var(--cards-bg);
}

.projects {
    grid-row: 1/3;
}

.projects .cards {
    display: grid;
    grid-template-columns: repeat(auto-fit, minmax(30ch, 1fr));
    gap: 2rem;
}

.projects .cards .card {
    display: flex;
    flex-direction: column;
    justify-content: space-between;
    gap: 1rem;
    padding: 2rem;
    height: 250px;
    border-left: 10px solid var(--project-border);
}

.projects .cards .card .icons {
    display: flex;
    justify-content: flex-end;
    gap: 2rem;
}

.announcements .card {
    padding: 0 2rem;
}

.announcements .card .announcement {
    padding: 2rem 0;
    cursor: pointer;
    font-size: 0.9rem;
}

.announcements .card .announcement:not(:last-child) {
    border-bottom: 1px solid #000;
}

.trending .card {
    padding: 1rem;
}

.trending .card .user {
    display: grid;
    grid-template-columns: 40px 1fr;
    gap: 1rem;
    cursor: pointer;
}

.trending .card .user:not(:last-child) {
    padding-bottom: 1.25rem;
}

.trending .card .user-icon {
    max-width: 40px;
    height: 40px;
}

.trending .card .user-icon img {
    height: 100%;
    border-radius: 50%;
}

.trending .user-name {
    font-weight: 400;
}

